# MasterDNS-Android-Client

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts  sync_python_core.sh
.github/workflows/: android-main-build.yml  android-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/masterdnsvpn/android/: MainActivityTest.kt  UiScreensTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tunnel_jni.cpp
app/src/main/java/com/masterdnsvpn/android/: ConfigModel.kt  ConfigStoreV3.kt  HevConfigBuilder.kt  HevNativeBridge.kt  HevTunnelEngine.kt  Localization.kt  MainActivity.kt  MainViewModel.kt  MasterDnsApplication.kt  MasterDnsVpnService.kt  PersianLocaleManager.kt  ProfileCodec.kt  ProfileQrCode.kt  PythonBridge.kt  TomlCodec.kt  TunnelDiagnosticsStore.kt  TunnelEngine.kt  TunnelEvent.kt  TunnelMappedDnsConfig.kt  TunnelRuntimeStateStore.kt  VpnSocketProtector.kt
app/src/main/java/com/masterdnsvpn/android/scanner/: CidrChunkStreamer.kt  DnsScannerEngine.kt  ScannerConfigStore.kt  ScannerLogic.kt  ScannerModels.kt  ScannerNetwork.kt
app/src/main/java/com/masterdnsvpn/android/ui/: AppShell.kt
app/src/main/java/com/masterdnsvpn/android/ui/screens/: ConfigScreen.kt  HomeScreen.kt  LogsScreen.kt  RoutingScreen.kt  ScannerScreen.kt
app/src/main/java/com/masterdnsvpn/android/ui/theme/: DesignSystem.kt  Theme.kt
app/src/main/python/: android_client_bridge.py  client.py
app/src/main/python/dns_utils/: DNS_ENUMS.py  DnsPacketParser.py  PacketQueueMixin.py  utils.py
app/src/main/res/drawable/: ic_app_icon.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-fa/: strings.xml
app/src/test/java/com/masterdnsvpn/android/: HevConfigBuilderTest.kt  RemoteProfileRequestTest.kt  TomlCodecTest.kt  TunnelRuntimeStateStoreTest.kt  VpnDnsPolicyTest.kt
app/src/test/java/com/masterdnsvpn/android/scanner/: CidrChunkStreamerTest.kt  DnsScannerEngineTest.kt  ScannerCsvExportTest.kt  ScannerLogicTest.kt
docs/: apk-size-analysis.md  info.txt  udp-support-escalation-spec.md
docs/remote-profile-server/: masterdns-profile-server.service  server.py
gradle/: gradle-daemon-jvm.properties
